# fastapi-tailwind

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/hello-world-app/: index.html  main.py  tailwind.config.js
fastapi_tailwind/: __init__.py  __main__.py  binary.py  errors.py  lifespan.py  middleware.py  tailwind.py
fastapi_tailwind/binaries/: info.txt
little_ruby/: __init__.py  __main__.py  metadata.py
scripts/: multi_build.py  update_binaries.py
